# eden-fractal-contract

./: .clang-format  CMakeLists.txt  LICENSE  README.md  first_submission.json  verifymsig.sh
include/: agreement-contract.hpp  errors.hpp  fractal-contract.hpp
ricardian/: agreement-contract-ricardian.cpp  fractal-contract-ricardian.cpp
schema/: Schemas.hpp  schemas.hpp
src/: agreement-contract.cpp  fractal-contract.cpp
test/: test-eden_fractal.cpp
